--- a/nvme_sles15_sp4.adoc
+++ b/nvme_sles15_sp4.adoc
@@ -118,6 +118,8 @@ Proceed with the following steps depending on the FC adapter being used on the h
 
 === Broadcom/Emulex
 
+.Steps
+
 . Verify that you have the recommended adapter and firmware versions. For example,
 +
 ----
@@ -131,14 +133,14 @@ Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 14.0.505.11, sli-4:2:c
 14.0.505.11, sli-4:2:c 
 ----
-
++
 The newer lpfc drivers (both inbox and outbox) already have `lpfc_enable_fc4_type` default set to 3, therefore, you no longer need to set this explicitly in the `/etc/modprobe.d/lpfc.conf`, and recreate the `initrd`. The `lpfc nvme` support is already enabled by default:
-
++
 ----
 # cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 3
 ----
-
++
 The existing native inbox lpfc driver is already the latest and compatible with NVMe/FC. Therefore, you do not need to install the lpfc out of box (OOB) driver.
 +
 ----
@@ -194,6 +196,8 @@ FCP CMPL: xb 00000102 Err 0000028e
 
 ONTAP reports an MDTS (Max Data Transfer Size) of 8 in the Identify Controller data which means the maximum I/O request size should be up to 1 MB. However, to issue I/O requests of size 1 MB for the Broadcom NVMe/FC host, the lpfc parameter `lpfc_sg_seg_cnt` should also be bumped up to 256 from the default value of 64. Use the following instructions to do so:
 
+.Steps
+
 . Append the value 256 in the respective `modprobe lpfc.conf` file:
 +
 ----
@@ -215,6 +219,8 @@ Now the Broadcom NVMe/FC host should be able to send up 1MB I/O requests on the 
 === Marvell/QLogic
 
 The native inbox qla2xxx driver included in the newer SLES15 SP4 MU kernel has the latest upstream fixes, essential for ONTAP support.
+
+.Steps
 
 . Verify that you are running the supported adapter driver and firmware versions, for example:
 +
@@ -240,6 +246,8 @@ Unlike NVMe/FC, NVMe/TCP has no auto-connect functionality. This manifests two m
 * No auto-connect during host bootup NVMe/TCP cannot automatically connect during host bootup as well.
 
 To comfortably tide over ONTAP failover events such as storage failover (SFOs), it is advised to set a longer retry period such as say 30 minutes by tweaking the `ctrl_loss_tmo` timer. Following are the details:
+
+.Steps
 
 . Verify whether the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
 +
@@ -298,6 +306,8 @@ sectype: none
 
 == Validate NVMe-oF
 
+.Steps
+
 . Verify that in-kernel NVMe multipath is indeed enabled by checking:
 +
 ----
@@ -326,9 +336,11 @@ Node           SN                    Model                   Namespace
 Usage                Format         FW Rev
 -------------------  -----------    --------
 85.90 GB / 85.90 GB  4 KiB + 0 B    FFFFFFFF
-
+----
++
 Example (a):
-
++
+----
 # nvme list
 Node           SN                    Model                   Namespace
 ------------   --------------------- ---------------------------------
@@ -350,7 +362,7 @@ nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.04ba0732530911ea8e8300a098dfdd91:su
 +- nvme4 fc traddr=nn-0x208100a098dfdd91:pn-0x208400a098dfdd91 host_traddr=nn-0x200000109b579d5e:pn-0x100000109b579d5e live optimized
 +- nvme6 fc traddr=nn-0x208100a098dfdd91:pn-0x208300a098dfdd91 host_traddr=nn-0x200000109b579d5f:pn-0x100000109b579d5f live optimized
 ----
-
++
 Example (a):
 +
 ----
@@ -396,7 +408,7 @@ NSID  UUID                                   Size
   ]
 }
 ----
-
++
 Example (a):
 +
 ----
