--- a/nvme_ol_85.adoc
+++ b/nvme_ol_85.adoc
@@ -172,7 +172,7 @@ options lpfc lpfc_sg_seg_cnt=256
 
 == Configuring the Marvell/QLogic FC Adapter for NVMe/FC
  
-.	The native inbox qla2xxx driver included in the RHEL 8.5 GA kernel has the latest upstream fixes, essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions:
+.	The native inbox qla2xxx driver included in the OL 8.5 GA kernel has the latest upstream fixes, essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions:
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
