--- a/overview.adoc
+++ b/overview.adoc
@@ -14,8 +14,8 @@ summary: This content provides distribution-specific guidance on how to configur
 :linkattrs:
 :imagesdir: ./media/
 
-This content provides host and version specific best practices to quickly configure SAN clients connected to ONTAP storage.  Your SAN clients and ONTAP storage can reside either on-premises, in the cloud, or both. For example you can configure on-premises ONTAP storage to connect to on-premises SAN hosts or to connect to SAN cloud clients.  You could also configure link:https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/index.html[Cloud Volumes ONTAP^] or link:https://docs.netapp.com/us-en/cloud-manager-fsx-ontap/index.html[Amazon FSx for ONTAP] to connect to on-premises SAN hosts or to connect to SAN cloud clients.
+This content provides host and version specific best practices to quickly configure SAN clients connected to ONTAP storage.  Your SAN clients and ONTAP storage can reside either on-premises, in the cloud, or both. For example you can configure on-premises ONTAP storage to connect to on-premises SAN hosts or to connect to SAN cloud clients.  You could also configure link:https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/index.html[Cloud Volumes ONTAP^] or link:https://docs.netapp.com/us-en/cloud-manager-fsx-ontap/index.html[Amazon FSx for ONTAP^] to connect to on-premises SAN hosts or to connect to SAN cloud clients.
 
- Proper configuration is important for best performance and successful failover.  
+Proper configuration is important for best performance and successful failover.  
 
 For iSCSI and FC, this content replaces the previous documentation for Linux Unified Host Utilities.
