--- a/hu_windows_2022.adoc
+++ b/hu_windows_2022.adoc
@@ -23,7 +23,7 @@ include::_include/windows/reuse_windows_san_booting.adoc[]
 == Installing Windows hotfixes
 We suggest the use of *latest cumulative update* to be installed on the server.
 
-NOTE: Go to the link:https://www.catalog.update.microsoft.com/Search.aspx?q=Update+Windows+Server+2022[Microsoft Update Catalog 2022^] website to obtain and install the required Windows hotfixes for your version of Windows.
+NOTE: Go to the link:https://www.catalog.update.microsoft.com/Search.aspx?q=update%20%22windows%20server%202022%22[Microsoft Update Catalog 2022^] website to obtain and install the required Windows hotfixes for your version of Windows.
 
 include::_include/windows/reuse_windows_hotfix_install.adoc[]
 
