--- a/hu_wuhu_71_rn.adoc
+++ b/hu_wuhu_71_rn.adoc
@@ -29,8 +29,7 @@ The Windows Unified Host Utilities 7.1 continues to support the following versio
 * Windows 2022
 
 [NOTE]
-NetApp qualifies additional components between releases of the Host Utilities software.
-For the latest information about the system requirements, see the link:https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^].
+NetApp qualifies additional components between releases of the Host Utilities software. For the latest information about the system requirements, see the link:https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^].
 
 
 === Features in this Host Utilities release
@@ -38,7 +37,7 @@ Windows Unified Host Utilities 7.1 includes support for E-Series storage systems
 
 == Prerequisite
 
-Install the latest hotfixes before installing the Windows Host Utilities. Refer to link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71.html[Windows Unified Host Utilities 7.1] document for your specific configuration hotfix requirements.
+Install the latest hotfixes before installing the Windows Host Utilities. Refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71.html[Windows Unified Host Utilities 7.1] document for your specific configuration hotfix requirements.
 
 
 [WARNING]
