--- a/_include/hu/reuse_hu_cloud_note.adoc
+++ b/_include/hu/reuse_hu_cloud_note.adoc
@@ -1,1 +1,1 @@
-NOTE: The configuration settings provided here will also apply to the cloud clients connected to link:https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/index.html[Cloud Volumes ONTAP^] and link:https://docs.netapp.com/us-en/cloud-manager-fsx-ontap/index.html[Amazon FSx for ONTAP^].
+NOTE: You can use the configuration settings provided in this content to configure cloud clients connected to link:https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/index.html[Cloud Volumes ONTAP^] and link:https://docs.netapp.com/us-en/cloud-manager-fsx-ontap/index.html[Amazon FSx for ONTAP^].
